[tool.poetry]
name = "GiveawaysDurationPrediction"
version = "0.1.0"
description = ""
authors = ["Luis Arroyo Linuesa <luisarroyol.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.8"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
tables = "^3.8.0"
beautifulsoup4 = "^4.12.2"
pyvpn = "^1.2"
spacy = "^3.6.1"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]